Selectively revert "simplify stream toList"
This partly reverts commit 547fe1514be0b409810d0f7693f359979a5768aa.