@@ -898,7 +898,7 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     public List<ServerGroupType> getEntitledGroupTypes() {
         return this.groups.stream().filter(g ->g.getGroupType() != null)
-                .map(ServerGroup::getGroupType).toList();
+                .map(ServerGroup::getGroupType).collect(Collectors.toList());
     }
 
     /**
@@ -907,7 +907,7 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     public List<EntitlementServerGroup> getEntitledGroups() {
         return this.groups.stream().filter(g ->g.getGroupType() != null)
-                .map(s -> (EntitlementServerGroup) s).toList();
+                .map(s -> (EntitlementServerGroup) s).collect(Collectors.toList());
     }
 
     /**
@@ -916,8 +916,7 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     public List<ManagedServerGroup> getManagedGroups() {
         return this.groups.stream().filter(g -> g.getGroupType() == null)
-                .map(s -> (ManagedServerGroup) s)
-                .collect(Collectors.toList());
+                .map(s -> (ManagedServerGroup) s).collect(Collectors.toList());
     }
 
     /**
