@@ -36,6 +36,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -182,6 +183,6 @@ public class RecurringCustomStateHandler extends BaseHandler {
                 // Get internal states
                 RecurringActionFactory.listInternalStates().stream()
                         .map(InternalState::getName)
-        ).toList();
+        ).collect(Collectors.toList());
     }
 }
