@@ -130,7 +130,7 @@ public class CVEAuditManager {
                         parameters.put("rank", chan.getRank());
                         return parameters;
                     });
-                }).toList();
+                }).collect(Collectors.toList());
 
         m.executeUpdates(parameterList);
     }
@@ -155,7 +155,7 @@ public class CVEAuditManager {
                         parameters.put("rank", chan.getRank());
                         return parameters;
                     });
-        }).toList();
+        }).collect(Collectors.toList());
 
         m.executeUpdates(parameterList);
     }
@@ -429,7 +429,7 @@ public class CVEAuditManager {
                     ).entrySet()
                     .stream()
                     // its safe to call get here since groupingBy will not produce empty lists
-                    .map(s -> s.getValue().get()).toList();
+                    .map(s -> s.getValue().get()).collect(Collectors.toList());
         });
     }
 
@@ -908,7 +908,7 @@ public class CVEAuditManager {
                         system.getPatchStatus(),
                         system.getChannels(),
                         system.getErratas()
-                )).toList();
+                )).collect(Collectors.toList());
     }
 
     /**
