@@ -206,7 +206,7 @@ public class MatcherJsonIO {
             });
 
         return Stream.concat(systems, jsonSystemForSelf(arch, includeSelf, selfMonitoringEnabled))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     private static Set<Long> getVirtualGuests(Server system) {
@@ -228,7 +228,7 @@ public class MatcherJsonIO {
                         p.getChannelFamily() != null ? p.getChannelFamily().getLabel() : "",
                         p.isBase(),
                         p.getFree()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -257,7 +257,7 @@ public class MatcherJsonIO {
                                 .collect(Collectors.toSet())
                 );
             })
-            .toList();
+            .collect(Collectors.toList());
     }
 
     /**
@@ -269,7 +269,7 @@ public class MatcherJsonIO {
             .createQuery("SELECT ps FROM PinnedSubscription ps", PinnedSubscription.class)
             .stream()
             .map(p -> new MatchJson(p.getSystemId(), p.getSubscriptionId(), null, null))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     /**
@@ -314,7 +314,7 @@ public class MatcherJsonIO {
                         vhm.getServers().stream()
                                 .flatMap(s -> getVirtualGuests(s).stream())
                                 .collect(Collectors.toSet())))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
